# mechanize

./: .appveyor.yml  .gitignore  .travis.yml  0.1-changes.txt  0.1.0-changes.txt  COPYING  COPYING.txt  COPYRIGHT  ChangeLog  GeneralFAQ.html.in  INSTALL  INSTALL.txt  MANIFEST.in  README.html.in  README.md  README.rst  README.txt  SECURITY.md  TODO  azure-pipelines.yml  cc-README.html.in  doc.html.in  forms.html.in  functional_tests.py  mytest.py  pp-README.html.in  publish.py  release.py  release_mechanize.py  run_tests.py  setup.cfg  setup.py  setup.py.in  test.py
attic/: BSDDBCookieJar.py  MSIEDBCookieJar.py
docs/: GeneralFAQ.txt  Makefile  advanced.rst  browser_api.rst  conf.py  development.txt  doc.txt  documentation.txt  download.txt.in  faq.rst  faq.txt  forms.txt  forms.txt.in  forms_api.rst  hints.txt  html.template  index.rst  index.txt  index.txt.in  support.txt
docs-in-progress/: doc.rst  doc2.rst
docs-old/: doc.txt  forms.txt.in  hints.txt  html.template  support.txt
examples/: BSDDBCookieJar.py  MSIEDBCookieJar.py  cookietest.cgi  hack21.py  pypi.py
mechanize/: _ClientCookie.py  _ConnCache.py  _Debug.py  _HeadersUtil.py  _LWPCookieJar.py  _MSIECookieJar.py  _MozillaCookieJar.py  _Opener.py  _Request.py  _Util.py  __init__.py  _auth.py  _beautifulsoup.py  _clientcookie.py  _debug.py  _entities.py  _equiv.py  _firefox3cookiejar.py  _form.py  _form_controls.py  _gzip.py  _headersutil.py  _html.py  _http.py  _lwpcookiejar.py  _markupbase.py  _mechanize.py  _mozillacookiejar.py  _msiecookiejar.py  _opener.py  _pullparser.py  _request.py  _response.py  _rfc3986.py  _seek.py  _sgmllib_copy.py  _testcase.py  _upgrade.py  _urllib2.py  _urllib2_fork.py  (+5 more)
test/: functional_tests.py  skiptest_opera.py  (+33 more)
test-tools/: cookietest.cgi  doctest.py  functools_copy.py  testprogram.py  twisted-ftpserver.py  twisted-localserver.py
(+14 files in other folders)
